--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     <header class="navbar" id="navbar">
         <ul class="nav-list">
             <div class="logo">
-                <a href="website.html"><img src="images/logo_transparentdia.jpg" alt="logo"></a>
+                <a href="index.html"><img src="images/logo_transparentdia.jpg" alt="logo"></a>
             </div>
 
-            <li><a href="website.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="store.html">Store</a></li>
@@ -43,7 +43,7 @@
         <div class="rightNav">
             <div class="follow-links">
                 <span class="follow-text">Follow us : </span>
-                <a href="https://www.instagram.com/apartslibrary/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></i><a>
+                <a href="https://www.instagram.com/ap.arts.library/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i></i><a>
             </div>
             
             
