--- a/about.html
+++ b/about.html
@@ -29,10 +29,10 @@
     <header class="navbar background" id="navbar">
         <ul class="nav-list">
             <div class="logo">
-                <a href="website.html"><img src="images/logo_transparentdia.jpg" alt="logo"></a>
+                <a href="index.html"><img src="images/logo_transparentdia.jpg" alt="logo"></a>
             </div>
 
-            <li><a href="website.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="store.html">Store</a></li>
