--- a/gallery.html
+++ b/gallery.html
@@ -27,9 +27,9 @@
 <body >
 	<header class="navbar headbg " id="navbar">
 		<ul class="nav-list">
-			<div class="logo "><a href="website.html"><img src="images/logo_transparentdia.jpg" alt="logo"></a></div>
+			<div class="logo "><a href="index.html"><img src="images/logo_transparentdia.jpg" alt="logo"></a></div>
 	
-			<li><a href="website.html">Home</a></li>
+			<li><a href="index.html">Home</a></li>
 			<li><a href="about.html">About</a></li>
 			<li><a href="gallery.html">Gallery</a></li>
 			<li><a href="store.html">Store</a></li>
@@ -41,7 +41,7 @@
 			<div class="follow-links">
 				<input class ="search-bar" type="text" placeholder="Search..">
 				<span class="follow-text">Follow us : </span>
-				<a href="https://www.instagram.com/apartslibrary/" target="_blank"><i class="fa fa-instagram"
+				<a href="https://www.instagram.com/ap.arts.library/" target="_blank"><i class="fa fa-instagram"
 						aria-hidden="true"></i></i><a>
 			</div>
 	
